Supprimer la fonction enrichAsn et mettre à jour le Dockerfile pour exécuter index.ts. Ajouter fetchAsn pour gérer la création de répertoires et l'appel à fetchAsn.

--- a/src/enrichAsn/docker/Dockerfile
+++ b/src/enrichAsn/docker/Dockerfile
@@ -13,4 +13,4 @@ COPY . .
 RUN bun install
 
 # Démarrer Nuxt
-CMD ["bun", "run", "src/enrichAsn/enrich.ts"]
+CMD ["bun", "run", "src/enrichAsn/index.ts"]
